# hcsshim

./: .dockerignore  .gitignore  .golangci.yml  .travis.yml  CMakeLists.txt  CMakePresets.json  CODEOWNERS  Dockerfile  LICENSE  Makefile  Makefile.bootfiles  Protobuild-stats.toml  Protobuild.toml  README.md  activatelayer.go  appveyor.yml  baselayer.go  build.ninja  build.ps1  buildinitrd.ps1  callback.go  checked-lint-conf.yaml  container.go  copyout.sh  createlayer.go  createprocess.go  createsandboxlayer.go  deactivatelayer.go  destroylayer.go  dm-startup.sh.template  errors.go  expandsandboxsize.go  exportlayer.go  funcwithnoreturn.go  funcwithreturnstring.go  getlayermountpath.go  getsharedbaseimages.go  go.mod  go.sum  guid.go  (+32 more)
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/instructions/: about-confidential-containers.instructions.md  v2-shim.instructions.md
.github/scripts/: dco-check.sh
.github/workflows/: ci.yml  codeql.yml  copilot-review.yml  create_linux_boot_files.yml  release.yml
Godeps/: Godeps.json
boot/: bootstrap.md  startup.sh  startup_simple.sh  startup_v2056.sh
client/: config.go  createext4vhdx.go  createsandbox.go  hotaddvhd.go  hotremovevhd.go  process.go  tartovhd.go  unsupported.go  utilities.go
cmake/: FindGo.cmake
cmd/blob2vhd/: blob2vhd.go
cmd/container-pipe/: main.go
cmd/containerd-runhcs-shim-v1/: delete.go  serve.go  service.go  start.go
cmd/containerd-shim-lcow-v1/: containerd-shim-lcow-v1.exe.manifest  main.go  manager.go  resource_windows_386.syso  resource_windows_amd64.syso  resource_windows_arm.syso  resource_windows_arm64.syso  versioninfo.json
cmd/containerd-shim-lcow-v2/: containerd-shim-lcow-v2.exe.manifest  main.go  manager.go  manager_test.go  resource_windows_386.syso  resource_windows_amd64.syso  resource_windows_arm.syso  resource_windows_arm64.syso  versioninfo.json
cmd/containerd-shim-runhcs-v1/: clone.go  computeagent.go  containerd-shim-runhcs-v1.exe.manifest  create-scratch.go  delete.go  diag.go  events.go  events_test.go  exec.go  exec_clone.go  exec_hcs.go  exec_lcow.go  exec_template.go  exec_test.go  exec_wcow_podsandbox.go  exec_wcow_podsandbox_test.go  hpc.go  io.go  io_npipe.go  main.go  marshal.go  nopformatter.go  pod.go  pod_test.go  resource_windows_386.syso  resource_windows_amd64.syso  resource_windows_arm.syso  resource_windows_arm64.syso  rootfs.go  serve.go  service.go  service_internal.go  service_internal_podshim_test.go  service_internal_taskshim_test.go  service_internal_test.go  start.go  task.go  task_hcs.go  task_hcs_test.go  task_lcow.go  (+4 more)
cmd/device-util/: device.go  driver.go  main.go  objdir.go  service.go
cmd/differ/: app.go  decompress.go  io.go  isolation.go  log.go  main.go  reexec.go  reexec_opts.go  sample.go  tar2ext4.go  wclayer.go
cmd/dmverity-vhd/: README.md  main.go
cmd/gcs/: main.go
cmd/gcs-sidecar/: main.go
cmd/gcstools/: generichook.go  installdrivers.go  main.go
cmd/go-runhcs/: runhcs_exec.go
cmd/hvsocketaddr/: README.md  main.go
cmd/images/: gpt_test.go  main.go
cmd/jobobject-util/: main.go
cmd/mkuvmcim/: main.go
cmd/ncproxy/: buckets.go  computeagent_cache.go  config.go  hcn.go  hcn_networking_test.go  main.go  ncproxy.exe.manifest  ncproxy.go  ncproxy_networking_test.go  ncproxy_v0_service.go  ncproxy_v0_service_test.go  resource_windows_386.syso  resource_windows_amd64.syso  run.go  server.go  server_test.go  service.go  store.go  store_test.go  utilities_test.go  (+1 more)
computestorage/: attach.go  destroy.go  detach.go  export.go  format.go  helper.go  helpers.go  import.go  initialize.go  mount.go  registry.go  setup.go  storage.go  zsyscall_windows.go
debuginit/: debuginit.c
docs/: customosbuildinstructions.md  gcsbuildinstructions.md
functional/: lcow_test.go  uvm_mem_backingtype_test.go  uvm_plannine_test.go  uvm_properties_test.go  uvm_scratch_test.go  uvm_scsi_test.go  uvm_vpmem_test.go  uvm_vsmb_test.go  wcow_test.go  wcow_xenon_v2_test.go
get-snp-report/: get-snp-report.c
global/: global.go
hack/: catcpio.sh  gomakedeps.sh
hcn/: doc.go  hcn.go  hcnendpoint.go  hcnendpoint_test.go  hcnerrors.go  hcnerrors_test.go  hcnglobals.go  hcnloadbalancer.go  hcnloadbalancer_test.go  hcnnamespace.go  hcnnamespace_test.go  hcnnetwork.go  hcnnetwork_test.go  hcnpolicy.go  hcnroute_test.go  hcnsupport.go  hcnsupport_test.go  hcnutils_test.go  hcnv1schema_test.go  hnsv1_test.go  zsyscall_windows.go
hcs/: go.mod  helpers_windows.go
hcsshimfakes/: fake_container.go  fake_layer_reader.go  fake_layer_writer.go  fake_process.go
hns/: errors.go  go.mod  go.sum  hnsaccelnet.go  hnsendpoint.go  hnsglobals.go  hnsnetwork.go  hnspolicy.go  hnspolicylist.go  hnssupport.go
init/: init  init.c
kernel/: README.md  completeUsermodeFileLists.md  kernel_config-4.12.x  patches_readme.md  readme.txt
loggermigration/: logging-audit.md  logging-migration-plan.md
opengcs/: Makefile  README.md  go.mod
osversion/: osversion.go  osversion_test.go  osversion_windows.go  osversion_windows_test.go  platform_compat_windows_test.go  windowsbuilds.go
scripts/: Get-ContainerLogs.ps1  New-NinjaBuild.ps1  New-ResourceObjectFile.ps1  NinjaBuild.psm1  Run-Tests.ps1  Set-VersionInfo.ps1  Test-Functional.ps1  Test-LCOW-UVM.ps1  Testing.psm1  Update-Proto.ps1  Verify-GoModules.ps1
service/: Makefile
test/: CMakeLists.txt  go.mod  go.sum  hcnendpoint_test.go  hcnloadbalancer_test.go  hcnnamespace_test.go  hcnnetwork_test.go  hcnsupport_test.go  hcnutils_test.go  hns_test.go  hnsv1_test.go  tools.go
tools/: Install-Tools.ps1  README.md  go.mod  go.sum  tools.go
uvm/: constants.go  create.go  create_test.go  createlcow.go  createlcow_test.go  createwcow.go  error.go  functional_tests.ps1  globals.go  globals_test.go  init_test.go  lcowscratch.go  modify.go  plan9.go  plan9_test.go  process.go  sample.go  sandbox.go  sandbox_test.go  scsi.go  scsi_test.go  start.go  terminate.go  types.go  uvm.go  vpmem.go  vpmem_test.go  vsmb.go  vsmb_test.go  wait.go
vsockexec/: Makefile  vsock.c  vsockexec.c
(+2109 files in other folders)
